fix timeline image / cookie consent overlap

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -54,7 +54,7 @@
 }
 
 .timeline>li .timeline-image {
-    z-index: 100;
+    z-index: 20;
     position: absolute;
     left: 0;
     width: 80px;
